# JSITester

./: App.js  README.md  app.json  package.json
android/: .project  build.gradle  gradle.properties  settings.gradle
android/aar/: jsilib-debug.aar
android/app/: BUCK  build.gradle
android/app/src/debug/java/com/reactnativejsitester/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/java/com/reactnativejsitester/: MainActivity.java  MainApplication.java
android/jsilib/: build.gradle
android/jsilib/src/androidTest/java/com/aniu/jsilib/: ExampleInstrumentedTest.java
android/jsilib/src/main/: AndroidManifest.xml
android/jsilib/src/main/cpp/: CMakeLists.txt  JSIinstaller.cpp  JSIinstaller.h  native-lib.cpp
android/jsilib/src/main/java/com/aniu/jsilib/: NativeFunCallUtils.java
android/jsilib/src/test/java/com/aniu/jsilib/: ExampleUnitTest.java
ios/: Podfile
ios/ReactNativeJSITester/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/ReactNativeJSITester.xcodeproj/: project.pbxproj
ios/ReactNativeJSITester.xcodeproj/xcshareddata/xcschemes/: ReactNativeJSITester-tvOS.xcscheme  ReactNativeJSITester.xcscheme
ios/ReactNativeJSITesterTests/: ReactNativeJSITesterTests.m
